--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lzwa",
+  "name": "hiswaca-front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,21 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.0",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
-    "i18next": "^25.6.3",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.554.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hot-toast": "^2.6.0",
-    "react-i18next": "^16.3.5",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17",
-    "three": "^0.181.2"
+    "react-router-dom": "^7.10.1",
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
